Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <h1>
 <a id="hompage" class="anchor" href="#hompage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hompage</h1>
 
-<p>page
-{<a href="https://www.youtube.com/watch?v=_nE0lT180vo">https://www.youtube.com/watch?v=_nE0lT180vo</a>}</p>
+<p>page</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Jmoon0123/main">Hompage</a> is maintained by <a href="https://github.com/Jmoon0123">Jmoon0123</a>.</span>
